--- a/Year 1/Web Dev/WebCourseWork2/index.html
+++ b/Year 1/Web Dev/WebCourseWork2/index.html
@@ -4,8 +4,8 @@
         <head>
             <meta charset="utf-8">
             <title>Easter</title>
-            <link rel="stylesheet" type="text/css" href="main.css">
-            <link rel="python" type="script/python" href="cgi-bin/easter.py">
+            <link rel="stylesheet" type="text/css" href="style.css">
+            <link href="https://fonts.googleapis.com/css2?family=Asap&family=IBM+Plex+Sans+Devanagari&family=Lato&family=M+PLUS+1&family=Montserrat&family=Roboto+Mono&family=Space+Mono&family=Ubuntu&display=swap" rel="stylesheet"> 
         </head>
         
         <main>
@@ -13,14 +13,14 @@
 
                 <!--Entrance point for the requested year-->
                 <div class="date_input">
-                    <label for="year">Please enter a year</label>
-                    <input type="number" name="year">
+                    <label for="year_entry">Please enter a year</label>
+                    <input type="number" id = "year_entry" name="year" required>
                 </div>
 
                 <!--User date format selection options-->
                 <div class="Options">
                     <p>How would you like this to be formated:</p>
-                    <input type="radio" name="date_options" id="numerically" value="n">
+                    <input type="radio" name="date_options" id="numerically" value="n" required>
                     <label for="numerically">Numerically</label>
                     <br>
                     <input type="radio" name="date_options" id="verbosely" value="v"> 
@@ -32,7 +32,7 @@
                 
                 <div class="submission">
                     <br>
-                    <input type="submit" value="submit"/>
+                    <input type="submit" value="Submit" id="btn"/>
                 </div>
 
             </form>
