--- a/Year 1/Web Dev/WebCourseWork1/details.html
+++ b/Year 1/Web Dev/WebCourseWork1/details.html
@@ -27,8 +27,7 @@
             <h3>Functionality and Components</h3> 
 
             <p>Most components of a GUI directly relate to some function(s) that can be executed by other means, such as the command line<br>
-            or pre-written machine code. The following are some examples of this.</p><br>
-
+            or pre-written machine code. The following are some examples of this.</p>
             <p id="components"> Basic GUIs are made up of some key components. Firstly buttons. A button could be as basic as a submit button<br>
             or more complex like like an interactive icon. They are activated with a simple click from a user and can be used to signal a message<br>
             to the system. This interact could represent an action such as moving from one file to another or completing a form.</p>
@@ -38,6 +37,9 @@
             vague when it comes to the result of an action being performed, GUI can be used to communicate the result of an action in a significantly<br>
             clearer way. E.g. moving a file from one place to another, a user can see the file be removed from one folder, and appear in another. on a <br>
             command line, you may or may not receive a line of text saying the transfer was succesful but the result cannot be physically seen and reviewed.<br>
+            By lowering the barrier of entry for these systems, computers can be used be a much wider range of people and can be adapted much quicker.<br>
+            In most cases, while overall customisation is lower for a GUI, in practice the average user of a sytem probably wont want to change that much<br>
+            about an enviroment. Most of these changes can be accomodated for, such as colour changes or placement of interactables.
             
             </p>
             <br>
@@ -53,8 +55,7 @@
             GUIs can take significantly longer to implement than a command line based approach as not only is design a key factor, but many more<br>
             can be created as a result. If a GUI is improperly implemented, it may actually cause a user more frustration than otherwise. Futhermore<br>
             GUIs require far more processing power and memory than a command line making it not worth the commitment for many applications. Most of these<br>
-            issues do not have a siginificant impact on the user experiance but are large factors to considor in the development cycle of a system.<br><br>
-        
+            issues do not have a siginificant impact on the user experiance but are large factors to considor in the development cycle of a system.<br>
             Unfotunatly, due to the wide spread implementation of GUI an additional problem has arrised. That being the quantity of different types of GUI<br>
             Most companies will develop their one unique GUI, which in itself is not an issue. But from the users perspective, they now have to learn<br>
             how to navigate a new interface. This is not an issue with exteremly simple GUI, but in some cases this can be a tedious activity.</p>
