--- a/Year 1/Web Dev/WebCourseWork1/history.html
+++ b/Year 1/Web Dev/WebCourseWork1/history.html
@@ -31,9 +31,13 @@
                     <th>Development</th>    
                 </tr>
                 <tr>
+                    <th>1963</th>
+                    <th><a href="https://en.wikipedia.org/wiki/Sketchpad">Sketchpad<a>, a program widely considered to be the first<br> graphical design program was developed. It was devloped by Ivan Sutherland.</th>
+                </tr>
+                <tr>
                     <th>1973</th>
                     <th><a href="https://en.wikipedia.org/wiki/PARC_(company)">Xerox Parc</a> develops the <a href="https://en.wikipedia.org/wiki/Xerox_Alto">alto</a> personal computer<br>
-                    It was the first computer to use a bitmap for a screen.</th>
+                    It was one of the first computer to use an entirely bitmaped<br> screen where the primary interaction method was a GUI.</th>
                 </tr>
                 <tr>
                     <th>1975</th>
@@ -54,8 +58,15 @@
             </table>
 
             <br>
+            <p>During and after the 1990s GUI popularity continued to grow becoming the default for most systems. Command line<br>
+            interfaces are now used far less in comparrison and only a small subset of people, such as developers, still make<br>
+            use of them. They were only further popularised with the rise of smartphones in the late 2000s and 2010s as the GUI<br>
+            was much interprarive then there counterpart.</p><br>
+
             <p>Source: <a href="https://en.wikipedia.org/wiki/History_of_the_graphical_user_interface">History of the graphical user interface</a></p>
         </main>
+
+
     </body>
 
 </html>
