--- a/Year 1/Web Dev/WebCourseWork1/index.html
+++ b/Year 1/Web Dev/WebCourseWork1/index.html
@@ -25,11 +25,12 @@
             <br/>
             <h2>Functionality Of GUI</h2>
             <p>Graphical User Interfaces (GUIs) are Interfaces that allow a user to interact, manipulate and control an electronic device. 
-                <br/>This is acheived through the use of grap hical and audio indicators displayed to a user from said device. These indicators<br/>
+                <br/>This is acheived through the use of graphical and audio indicators displayed to a user from said device. These indicators<br/>
                 would normally be used in place of a command line in order to simplify a devices use. This dramatically lowers the barrier of<br/>
                 entry for many users as a command line approach is not as intuitive in its use. For example accessing a file via command line<br/>
                 may require many command entries for navigation, and another to actually interact with it. Whereas using a GUI this might only<br/>
-                take a couple of clicks with a mouse. This can be seen below.</p>
+                take a couple of clicks with a mouse or an equivilent peripheral. GUI indicators usually directl relate with a specifc command or<br>
+                function. This can be seen below.</p>
             <br/>
             <div id="images">
                 <a href="https://en.wikipedia.org/wiki/Command-line_interface" target="_blank"><img src="assets/CLImage.png" alt="Command Line Image"></a>
@@ -39,15 +40,22 @@
             <p> In order to use the terminal, the user had to either of had prior knowledge of what commands to use,<br/>
                 or outside assistance. Unlike the GUI, which does not require either one and can be learnt and navigated<br>
                 without any of prior knowledge. This is due to the visual representation that it provides. Even for experianced<br>
-                computer users with significant prior knowledge of command lines, navgating a GUI can be much faster then learning<br>
-                the required syntax to navigate a new system.
+                computer users with significant prior knowledge of command lines, navgating a GUI can be much faster then learning the<br>
+                required syntax to navigate a new system. This is important as most software/systems will be developed by different <br>
+                organisations meaning they will most likely use different syntax. GUIs being made up of buttons and text inputs, even<br>
+                if they looked radically different from one another, the actuall functionality remains fairly similar. This can be further<br>
+                communitcated to the user with visual or clear text instructions both of which are not present on a command line.
             </p>
             <br/>
             <p>
+                Interaction with GUI is done using two main peripherals, a keyboard and a mouse. Some other peripherals may inlude: joysticks,<br>
+                touchpads and trackballs. The mouse can click and interact with buttons on a screen, while a keyboard can provide word based input.<br>
                 GUI is not only used on desktop computers, it is also used on consoles, mobile devices as well as many other platforms.<br/>
                 A GUI is even on more useful on these platforms as a keyboard is usually not present further increasing the difficulty<br/>
-                of use. GUIs can be completely different from one another but all share the same basic componnents. Some of these are listed<br>
-                on the technical details page.
+                of use. Therefore a command line would not be feasible on theses sytems. Mobile devices lend themselfs perfectly to a touchscreen<br>
+                GUI, as there small size makes developing on them potentially challengeing. However, as a result almost all software developed<br>
+                for said mobile device must be done on an external platform. GUIs can be completely different from one another <br>
+                but all share the same basic componnents. Some of these are listed on the technical details page.
             </p>
         </main>
 
